--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,15 +81,16 @@ header {
   }
   header {
     position: static;
-    width: 100%;
-    height: 10%;
-    margin: 0;
+    margin: 5px;
   }
   #nav-bar {
-    gap: 10px;
+    gap: 5px;
     width: 100%;
-    justify-content: space-around;
-    margin: 0 auto;
+    justify-content: space-between;
+    margin: 10px auto;
+  }
+  #nav-bar h3 {
+    font-size: 0.7rem;
   }
   body {
     display: block;
@@ -99,7 +100,7 @@ header {
   }
   .main-content {
     width: 100% !important;
-    padding: 0;
+    padding: 10px 0;
     margin: 0;
     height: 100% !important;
   }
@@ -133,8 +134,18 @@ header {
     width: 80vw;
     text-align: center;
   }
+  .function-name {
+    text-align: center;
+    margin-top: 10px;
+  }
   .name-input-container {
     flex-direction: column;
     gap: 10px;
+  }
+  .create-text-button {
+    margin: 10px auto;
+  }
+  .copy-button {
+    margin: 10px auto;
   }
 }/*# sourceMappingURL=style.css.map */
