--- a/styles/style.scss
+++ b/styles/style.scss
@@ -74,6 +74,7 @@ header {
     gap: 100px;
 }
 
+// Media query for mobile devices
 @media screen and (max-width: 600px) {
     #page-title {
         position: static;
@@ -81,25 +82,29 @@ header {
     }
     header {
         position: static;
-        width: 100%;
-        height: 10%;
-        margin: 0;
+        margin: 5px;
     }
     #nav-bar {
-        gap: 10px;
+        gap: 5px;
         width: 100%;
-        justify-content: space-around;
-        margin: 0 auto;
+        justify-content: space-between;
+        margin: 10px auto;
+
+        h3 {
+            font-size: 0.7rem;
+        }
     }
+
     body {
         display: block;
         width: 100% !important;
         height: 100vh;
         margin: 0;
     }
+
     .main-content {
         width: 100% !important;
-        padding: 0;
+        padding: 10px 0;
         margin: 0;
         height: 100% !important;
     }
@@ -141,9 +146,22 @@ header {
         text-align: center;
     }
 
+    .function-name {
+        text-align: center;
+        margin-top: 10px;
+    }
+
     .name-input-container {
         flex-direction: column;
         gap: 10px;
+    }
+
+    .create-text-button {
+        margin: 10px auto;
+    }
+
+    .copy-button {
+        margin: 10px auto;
     }
     
     
