--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,8 +8,16 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+  --color-ButtonBg: #525252;
+  --color-Background: #f5f5f5;
+  --color-Main-Text: #ffffff;
+  --color-Subtitle: #d4d4d4;
+  --color-Text: #e5e5e5;
+  --color-Disabled: #737373;
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --font-poppins: Poppins, sans-serif;
+  --font-roboto: Roboto, sans-serif;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -22,5 +30,5 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-poppins), var(--font-roboto), sans-serif;
 }
