--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,15 +14,16 @@
   --color-Subtitle: #d4d4d4;
   --color-Text: #e5e5e5;
   --color-Disabled: #737373;
+  --color-NavBg: #323232;
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
-  --font-poppins: Poppins, sans-serif;
+  --font-poppins: var(--font-poppins), sans-serif;
   --font-roboto: Roboto, sans-serif;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #262626;
     --foreground: #ededed;
   }
 }
