--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,7 +9,8 @@
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --color-ButtonBg: #525252;
-  --color-Background: #f5f5f5;
+  --color-SubComponentBg: #323232;
+  --color-Background: #262626;
   --color-Main-Text: #ffffff;
   --color-Subtitle: #d4d4d4;
   --color-Text: #e5e5e5;
