fix: mobile navbar fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,6 +23,8 @@
   
   --animate-fadeIn: fadeIn 0.3s ease-out;
   --animate-scaleIn: scaleIn 0.3s ease-out;
+
+  --breakpoint-phone: 450px;
 }
 
 @keyframes fadeIn {
