--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,13 +1,9 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
+  --color-background: var(--Color-Background);
+  --color-foreground: var(--Color-Foreground);
+  --color-Foreground: #ededed;
   --color-ButtonBg: #525252;
   --color-SubComponentBg: #323232;
   --color-Background: #262626;
@@ -67,16 +63,9 @@
   }
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #262626;
-    --foreground: #ededed;
-  }
-}
-
 body {
-  background: var(--background);
-  color: var(--foreground);
+  background: var(--color-Background);
+  color: var(--color-Foreground);
   font-family: var(--font-poppins), var(--font-roboto), sans-serif;
 }
 
